# WORM-FS

./: Attribute.c  Attribute.h  Create WORM.sql  Directory.c  Directory.h  Dockerfile  File.c  INFO.sh  LICENSE.md  Link.c  Logger.c  Logger.h  Makefile.am  ParseAudit.pl  README.md  Retention.c  Retention.h  Shared.c  Shared.h  TestWithAutoCommit.conf  TestWithoutAutoCommit.conf  Utils.c  Utils.h  WORM-FS.sln  WORM.conf  attribute.c  config.c  config.h  configure.ac  context.c  context.h  directory.c  file.c  file.h  filter.c  filter.h  inifile.c  inifile.h  link.c  link.h  (+19 more)
SynoBuildConf/: build  depends  install
WORM-FS/: WORM-FS.vcxproj
scripts/: postinst  postuninst  start-stop-status
utils/: getretention.c  makefile  setretention.c
